hard-gists/5208296/run.log
=== Docker Run Log for 5208296 ===
Started at: Mi 29. Okt 15:27:45 CET 2025

[2025-10-29 15:27:46] START: Running container for 5208296
[2025-10-29 15:27:46] SUCCESS: Container 77d3fcf95103a23215fe6b90c9afab7e2b4e51a478f77ad82feaaf1f432245b1 started for 5208296
=== Container logs for 5208296 ===
  File "/snippet.py", line 64
    print "unhandled iopub msg:", msg_type
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5208296 ===
[2025-10-29 15:27:48] INFO: Container 77d3fcf95103a23215fe6b90c9afab7e2b4e51a478f77ad82feaaf1f432245b1 has stopped
